[tool.poetry]
name = "cash"
version = "0.1.0"
description = "This is a project to pull data from a gmail account"
authors = ["Francisco Perez Garcia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
