[tool.poetry]
name = "cash"
version = "0.1.0"
description = "This is a project to pull data from a gmail account"
authors = ["Francisco Perez Garcia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
google-api-python-client = "^2.65.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.7.1"


[tool.poetry.group.dev.dependencies]
pylama = "^8.4.1"
black = "^22.10.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
